fix layout issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@
 }
 
 @keyframes dash {
-  to {
+  100% {
     stroke-dashoffset: 0;
     fill: currentColor;
     stroke: none;
